--- a/LaTeX/literatur.bib
+++ b/LaTeX/literatur.bib
@@ -32,6 +32,7 @@
 	title={Vita VMK Master, Working Instructions},
 	author={VITA},
 	year={2014},
+	url={https://mam.vita-zahnfabrik.com/portal/ecms_mdb_download.php?id=63578&sprache=en&fallback=de&rechtsraum=&cls_session_id=&neuste_version=1}
 }
 @book{sharpling2014,
 	title={Principles and Practice of Esthetic Dentistry-E-Book: Essentials of Esthetic Dentistry},
@@ -40,11 +41,11 @@
 	publisher={Elsevier Health Sciences}
 }
 
-@book{zirkonzahn2018,
+@misc{zirkonzahn2018,
 	title={Zirkonzahn Brochure},
 	author={{Zirkonzahn GmbH}},
 	year={2018},
-	url = {http://zirkonzahn.com/assets/files/brochueren/DE-Broschuere-Die-Zirkonzahn-Schule-web.pdf}
+	url={http://zirkonzahn.com/assets/files/brochueren/DE-Broschuere-Die-Zirkonzahn-Schule-web.pdf}
 }
 @article{lee2016absorption,
 	title={Absorption of impinging water droplet in porous stones},
