--- a/LaTeX/einleitung.tex
+++ b/LaTeX/einleitung.tex
@@ -31,21 +31,25 @@
 \chapter{State of the Research}
 \label{sec:stand_forschung}
 
-Addressing the shading process of the dental zirconia-based ceramics as a combined procedure of drop generation, dispersion of the ink within the porous material and post sintering generation of the color below the surface of the porous material, it can be said that the quantitative coloring process of the dental crowns is an uncharted area for the scientific researches in the present-day. 
+Addressing the shading process of the dental zirconia-based ceramics as a combined procedure of drop generation, dispersion of the ink within the porous material and post sintering generation of the color below the surface of the porous material, it can be said that the quantitative coloring process of the dental crowns is an uncharted area for the scientific researches in the present-day. There have been some research made in the fields concerning the absorption of the liquid by materials presenting a porous inner structure and permeable surface conditions. How the liquid is distributed inside the material, what are the effects of the pore sizes, forms and distributions is investigated by various teams from all around the world for a variety of liquids and porous materials. 
 
 
-In 2016 Lee et al. have investigated the absorption behavior of water drops impinging porous stones experimentally and numerically. The investigation includes the phases from spreading to evaporation for a water droplet considering the absorbed amount of the droplet during the depletion and spreading of the humidity within the manner depending on time for three porous materials. Quantitative measurements of the water absorption for the materials are conducted with high-speed imaging and neutron radiography methods during the time range from the impact moment to the end of the spreading phase after absorption. Neutron radiography shows a high resolution quantitative distribution of absorbed water. During the first contact and deposition on the surface the droplets do not exhibit a wetting behavior.  As soon as the droplet acquires its maximum diameter on the surface, it gets fixed and the contact angle with the surface remains constant as long as the droplet is not drained by the stone. The absorption behavior doesn’t have the same attributes throughout the whole process. At the beginning the material shows a contact resistance blocking the absorption, which is associated with the entrapped air beneath the area encapsulated by the borders of the water droplet. In the second phase the encapsulated air finds a way to diffuse away so the capillary flow takes place flawlessly until the total disappearance of the droplet on the surface is observed. The experimental data shows accordance to the phases of the numerical model for water flow inside the unsaturated porous material. The collision velocity has a huge effect on drop spreading on the surface and impregnation, but not so much on the distribution of the water after the initial absorption. The absorption and distribution rates are highly relevant to the capillary structure of the stones.\citep{lee2016absorption}
 
-On a different aspect some research has been conducted about the effect of the coloring process on the structural strength of the zirconia. In the research of Shah et al. coloring zirconia with cerium acetate mixtures with a maximum ink weight ratio of 5\% provided a distinctive shade and did not cause a mechanical disadvantage. However, the ratios above 5\% have decreased the mechanical properties while not increasing the shading level significantly. The paper also includes data for case where the coloring process is conducted using cerium chloride and bismuth chloride. For both cases 1\% coloring agent was the limit, if the flexural strength was to be conserved. The low temperature degradation was also observed in the frame of the paper, which did not show any co-dependence with the coloring solution.\citep{shah2008effect}
-
+\section{Structure of the Porous Medium}
 
 The crystallographic state of zirconia depends on the temperature under atmospheric pressure. Until reaching a temperature of {1170\textdegree} Celcius the crystallographic structure shows a monoclinic symmetry. After that temperature the structure can be defined as tetragonal until {2370\textdegree} C , which afterwards becomes cubic up to the melting point. The volume of the material increases about 4.5\% during the transformation from tetragonal to monoclinic phases, which is enough to cause a crack induced failure. This evitable transformation begins at about {950\textdegree} C while cooling down and the only way to stabilize the tetragonal structure is creating CaO, MgO, $Y_{2}O_{3}$ or $CeO_{2}$ oxides inside the structure to keep the tetragonal formation  at room temperature, which eliminates the crack induction and therefore the structural failure of the material parallel to an enhanced toughness. \citep{denry2008state}
+
+On a different aspect, some research has been conducted about the effect of the coloring process on the structural strength of the zirconia. In the research of Shah et al. coloring zirconia with cerium acetate mixtures with a maximum ink weight ratio of 5\% provided a distinctive shade and did not cause a mechanical disadvantage. However, the ratios above 5\% have decreased the mechanical properties while not increasing the shading level significantly. The paper also includes data for case where the coloring process is conducted using cerium chloride and bismuth chloride. For both cases 1\% coloring agent was the limit, if the flexural strength was to be conserved. The low temperature degradation was also observed in the frame of the paper, which did not show any co-dependence with the coloring solution.\citep{shah2008effect}
+
+\section{Ink Distribution and Infiltration Time}
+In 2016 Lee et al. have investigated the absorption behavior of water drops impinging porous stones experimentally and numerically. The investigation includes the phases from spreading to evaporation for a water droplet considering the absorbed amount of the droplet during the depletion and spreading of the humidity within the manner depending on time for three porous materials. Quantitative measurements of the water absorption for the materials are conducted with high-speed imaging and neutron radiography methods during the time range from the impact moment to the end of the spreading phase after absorption. Neutron radiography shows a high resolution quantitative distribution of absorbed water. During the first contact and deposition on the surface the droplets do not exhibit a wetting behavior.  As soon as the droplet acquires its maximum diameter on the surface, it gets fixed and the contact angle with the surface remains constant as long as the droplet is not drained by the stone. The absorption behavior doesn’t have the same attributes throughout the whole process. At the beginning the material shows a contact resistance blocking the absorption, which is associated with the entrapped air beneath the area encapsulated by the borders of the water droplet. In the second phase the encapsulated air finds a way to diffuse away so the capillary flow takes place flawlessly until the total disappearance of the droplet on the surface is observed. The experimental data shows accordance to the phases of the numerical model for water flow inside the unsaturated porous material. The collision velocity has a huge effect on drop spreading on the surface and impregnation, but not so much on the distribution of the water after the initial absorption. The absorption and distribution rates are highly relevant to the capillary structure of the stones.\citep{lee2016absorption}
+
 
 Pecho et al. have conducted experiments to analyse the optical behaviour of dental zirconia and dentin in comparison utilizing Kubelka-Munk theory. The results show that the current zirconia materials alone could not satisfy the luminous transmittance of the natural dentin so an additive application of masking is required to reach an approximate to the natural tooth.\citep{pecho2015optical}
 
 The infiltration time of the porous medium was formulated by Markicevic et al. in 2009 as:
 
-\begin{equation}
+\begin{equation}\label{eq:InfTime}
 t_{in}=\kappa \cdotp {\frac{\mu \cdotp r{_0}^{1.85}}{\sigma \cos({\theta})\varPhi^{0.38}}}
 \end{equation}
 \newline
@@ -56,12 +60,12 @@ Stratov et al. have provided experimental results regarding  the spreading phase
 The dispersion behavior of liquid drops inside porous media which are previously saturated with the identical liquid are examined in the work of Starov et al. The study was conducted considering both theoretical and experimental perspectives. The study was conducted both theoretical and experimental perspectives. The spreading of a liquid on a dry solid medium is governed by a power law and it is shown that the same power law applies to the case with saturated medium. The liquid flow within the porous medium is modeled using the Brinkman’s equations. The effective lubrication and the liquid exchange between the drop and the porous medium are found to have equal significance through which the drop dispersion equation is generated. \citep{starov2002saturated}
 \newline
 
-\begin{equation}
+\begin{equation} \label{eq:SpreadingDia}
 L=L_0 (1+10(\frac{4}{\pi})^3 \frac{V^3 \gamma}{L_0^{10} \mu}\omega t)^{0.1}
 \end{equation}
 \newline
 
-The formula 2.2 shows the parameters which define the diameter of the covered spot by a deployed drop on the saturated surface of the porous material. $L_0$ V are the measured initial diameter and volume of the drop. $\omega$ is defined as the effective lubrication coefficient and has to be acquired experimentally for each porous medium and impregnating liquid pair. The t as the last parameter of the equation stands for the time as usual. 
+The formula \ref{eq:SpreadingDia} shows the parameters which define the diameter of the covered spot by a deployed drop on the saturated surface of the porous material. $L_0$ V are the measured initial diameter and volume of the drop. $\omega$ is defined as the effective lubrication coefficient and has to be acquired experimentally for each porous medium and impregnating liquid pair. The t as the last parameter of the equation stands for the time as usual. 
 
 According to Hapgood et al. the properties of the porous medium, such as its porosity, the size and the orientation of the pores and the chemical properties of the surface affect the impregnation and the dispersion behavior of the drops. The Washburn equation is employed by multiple authors to generate a model. These models are grounded on the existence of cylindrical capillaries lying parallel to each other. The Washburn equation describes the behavior of the drops by stating that the wetting is induced bu capillary pressure while the viscous dissipation of the flow causes resistance to the dissipation.
 
@@ -79,21 +83,16 @@ An effective dot size which is greater than the actual dot size is used to compe
 The halftone tonality is greatly affected by optical dot gain a phenomena caused by the photon diffusion inside the medium. The point spread function (PSF) is one of the ways to model the optical dot gain. The derivation of an appropriate PSF is accomplished through solving the radiative transfer equation, which leads to a PSF in terms of the scattering and absorption coefficients of the medium. This PSD is then used for calculating the average diffusion distance of the photons inside medium. It is shown in the work of Rogers that the Z-sum, which can be expressed explicitly, can be estimated by $\mu^{-s}$, where $\mu$ is the fractional ink coverage and s has values between 0 and 1.  The interrelationship  between the PSF  approach and the probability approach is proven to be strong. \citep{rogers2015point}
 \section{Drop Deployment}
 
+In the book of Eric R Lee, the generation methods parameters and interacting parameters for microdrop generation is comprehensively explained highlighting the possible differences of the the outcomes, when different systems are utilized. The available technology for providing a drop on demand printing system rather than continuous jetting is to be summarized in the next section marking the advantages of each system comparatively.  
 
-\subsection{Piezoelectric}
+The first method to consider is the thermal inkjet.  If the printing system is considered to be constructed of a nozzle at the bottom to let the generated drops accelerate absolutely vertically to the ground and an ink pool above the nozzle to provide a continuous ink supply during the printing process, a thin heating element can be placed between the nozzle and the ink pool. A high current flow for a fraction of a millisecond through the heating element causes an instantaneous temperature increase in the heating element, which consequently leads to evaporation of the liquid wetting the surface of the heater. The evaporation of the liquid in such a short period means an increase of the volume of the material resting just above the nozzle. This expansion causes the liquid waiting at the tip of the nozzle to be propelled out of the nozzle with the instantaneous pressure pulse. the reaction of the liquid under high temperature is to be taken into consideration.
 
-
-\subsection{Electromagnetic}
-\label{sec:freiheitsgrad_eines_getriebes}
-
-
-\section{Ceramic coloring}
-\label{sec:grundlagen_für_die_kinematischen_betrachtungen}
+Piezoelectric ceramics are an elite solution for pulse generation. Under electrical load the piezoelectric material shows elongation in a direction depending on the voltage sign and crystal structure orientation. A tube designed as the nozzle or as the reservoir above the nozzle ejects the fluid out of the nozzle when the diameter of the inner circle becomes smaller under load. Similarly a planer actuator placed above the nozzle feeds the fluid spontaneously in to the nozzle when the electrical loading causes a shear in the direction of the nozzle inside the crystal structure of the piezoceramic. Utilizing the planar actuators is a promising practice for parallel actuator designs for printing purposes.\citep{lee2002microdrop}
 
 
 \chapter{State of the Technology}
 \label{sec:stand_technik}
-Even in the most contemporary dental laboratory of today's world, the coloring process is accomplished manually by a experienced dental technologist, who is following the guidelines prepared by the dental ink companies, which explain how a dental crown has to be colored sequentially using different colors on different areas of a single crown summarized in about 20 basic steps. The application of the ink on the dental crown with brush strokes takes about 5 minutes for each tooth depending on the manual measurements of the ink application process conducted by a dental technologist from Zirkonzahn for educational purposes.
+Even in the most contemporary dental laboratory of today's world, the coloring process is accomplished manually by an experienced dental technologist, who is following the guidelines prepared by the dental ink companies, which explain how a dental crown has to be colored sequentially using different colors on different areas of a single crown summarized in about 20 basic steps. The application of the ink on the dental crown with brush strokes takes about 5 minutes for each tooth depending on the manual measurements of the ink application process conducted by a dental technologist from Zirkonzahn for educational purposes.
 On the left side you can see a cutout of a lab card. Dentists mark different areas of the crown with different colors from the guide for the technicians.
 And on the right side are the tasks of a dental technician, which are mainly. Milling, Manually coloring using a brush, furnacing to burn the color to the zirconia and lastly polishing for a natural look.
 And the coloring part is the process, on which this thesis is focused.
