--- a/LaTeX/literatur.bib
+++ b/LaTeX/literatur.bib
@@ -154,3 +154,10 @@
 	year={2015},
 	publisher={Wiley Online Library}
 }
+@book{lee2002microdrop,
+	title={Microdrop generation},
+	author={Lee, Eric R},
+	volume={5},
+	year={2002},
+	publisher={CRC press}
+}
