--- a/LaTeX/einleitung.tex
+++ b/LaTeX/einleitung.tex
@@ -31,7 +31,7 @@
 \chapter{State of the Research}
 \label{sec:stand_forschung}
 
-Addressing the shading process of the dental zirconia-based ceramics as a combined procedure of drop generation, dispersion of the ink within the porous material and post sintering generation of the color below the surface of the porous material, it can be said that the quantitative coloring process of the dental crowns is an uncharted area for the scientific researches in the present-day. There have been some research made in the fields concerning the absorption of the liquid by materials presenting a porous inner structure and permeable surface conditions. How the liquid is distributed inside the material, what are the effects of the pore sizes, forms and distributions is investigated by various teams from all around the world for a variety of liquids and porous materials. 
+Addressing the shading process of the dental zirconia-based ceramics as a combined procedure of drop generation, dispersion of the ink within the porous material and post sinter generation of the color below the surface of the porous material, it can be said that the quantitative coloring process of the dental crowns is an uncharted area for the scientific researches in the present-day. There have been some research made in the fields concerning the absorption of the liquid by materials presenting a porous inner structure and permeable surface conditions. How the liquid is distributed inside the material, what are the effects of the pore sizes, forms and distributions is investigated by various teams from all around the world for a variety of liquids and porous materials. 
 
 
 
@@ -89,19 +89,23 @@ The first method to consider is the thermal inkjet.  If the printing system is c
 
 Piezoelectric ceramics are an elite solution for pulse generation. Under electrical load the piezoelectric material shows elongation in a direction depending on the voltage sign and crystal structure orientation. A tube designed as the nozzle or as the reservoir above the nozzle ejects the fluid out of the nozzle when the diameter of the inner circle becomes smaller under load. Similarly a planer actuator placed above the nozzle feeds the fluid spontaneously in to the nozzle when the electrical loading causes a shear in the direction of the nozzle inside the crystal structure of the piezoceramic. Utilizing the planar actuators is a promising practice for parallel actuator designs for printing purposes.\citep{lee2002microdrop}
 
+As a third possibility the electromagnetic actuators are a promising solution. An electromagnetic actuator utilizes a persistent magnet as the core material on the flow limiting valve pin and an active coil to create a magnetic field around the core to move it via the generated Lorentz force. Electro magnetic actuation is an affordable solution for the drop deployment problematic, but it comes with its own drawbacks. In comparison to piezoelectric valves there is more heat loss and consequently a lower efficiency. The theoretical drop generation rate is also considerably lower than the one of a piezoelectric valve, due to the high mass and the generated momentum during the movement of the magnetic core in comparison to micro flexion of the piezoelectric ceramic.\citep{nguyen2002fundamentals}
+
 
 \chapter{State of the Technology}
 \label{sec:stand_technik}
-Even in the most contemporary dental laboratory of today's world, the coloring process is accomplished manually by an experienced dental technologist, who is following the guidelines prepared by the dental ink companies, which explain how a dental crown has to be colored sequentially using different colors on different areas of a single crown summarized in about 20 basic steps. The application of the ink on the dental crown with brush strokes takes about 5 minutes for each tooth depending on the manual measurements of the ink application process conducted by a dental technologist from Zirkonzahn for educational purposes.
-On the left side you can see a cutout of a lab card. Dentists mark different areas of the crown with different colors from the guide for the technicians.
-And on the right side are the tasks of a dental technician, which are mainly. Milling, Manually coloring using a brush, furnacing to burn the color to the zirconia and lastly polishing for a natural look.
-And the coloring part is the process, on which this thesis is focused.
+Even in the most contemporary dental laboratory of today's world, the coloring process is accomplished manually by an experienced dental technologist, who is following the guidelines prepared by the dental ink companies, which explain how a dental crown has to be colored sequentially using different colors on different areas of a single crown summarized in about 20 basic steps for anterior and posterior surfaces of the crowns separately\citep{idscad2016}. The application of the ink on the dental crown with brush strokes takes about 5 minutes for each tooth depending on the manual measurements of the ink application process conducted by a dental technologist from Zirkonzahn for educational purposes.
+In the Figure \ref{fig:lab_card} you can see a cutout of a lab card showing a section of the anterior teeth with markings. Dentists mark different areas of the crown with different labels referring to the colors from the guide, and send it  with an actual photo of the dental area of the patient under warm and cold light to the technician. So the technician can have a better feeling about the distribution.
+\newline
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.5\textwidth]{grafiken/lab_card.png}
 			\caption{Cutout of a lab card \citep{sharpling2014}}
 	\label{fig:lab_card}
 \end{figure}
+\newline
+The Figure \ref{fig:CrownProcesses} shows the sequential states of the dental crowns after each main process conducted by the dental technologist.First of all, the crowns have to be milled out of cylindrical blank which can provide enough bulk material for about 20 crowns. The milled crowns are colored via variety of brushes using  false colored inks to help the dental technician to visually differentiate the colored regions and the inks from each other, which do not possess their final color and have an extremely low contrast so that it is hard process for the human eye to recognize the borders of the different ink applied areas.
+
 
 \begin{figure}[h]
 	\centering
@@ -109,14 +113,23 @@ And the coloring part is the process, on which this thesis is focused.
 	\caption{Making of dental implants \citep{zirkonzahn2018} }
 	\label{fig:CrownProcesses}
 \end{figure} 
+ 
 
+Afterwards te colored dental crowns are sintered for the ceramic to reach its final strength. The false colors of the inks evaporate at temperatures above 1200\textdegree C and the metalionic ink becomes more visible providing the zirconia natural tooth like shade which roots from the depths of the ceramic structure. As a final process the crowns are masked and polished.
+
+
+
+\chapter{Review of the State of the Research and Technology}
+\label{sec:kritik_stand_technik}
+The second stage which is the coloring process is the part this thesis is focused on. The coloring process is a qualitative procedure. The amount of ink to apply on the dents and edges of the crown are described in measures of brush strokes. The literature or the technical documentation does not provide a quantitative approach about the required amount of ink. In Figure \ref{fig:false_colored} one can observe how cumbersome it is to accomplish the full colorization of a crown. More importantly,if the batch size is large an important problem surfaces. The sequential teeth have to comply with the natural ones already present in the application area or the ones colored before. The shading tolerances cannot be allowed to be too high, because of the uncommon irregularity of the teeth colors this situation would cause for the patient. 
+\newline
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.6\textwidth]{grafiken/false_colored.png}
 	\caption{False colored crowns after manual brushing \citep{zirkonzahn2018}}
 	\label{fig:false_colored}
 \end{figure}
+\newline
 
-
-\chapter{Review of the State of the Research and Technology}
-\label{sec:kritik_stand_technik}
+There are already devices to check the generated shade as a quality control measure. The proactive measure to control the shade to be generated is premixing the coloring agent with the brightener at the factory to guarantee that the zirconia will have the predefined color after the sinter if the zirconia is soaked in to the ink or the ink is applied on the surface until saturation is reached.
+For the printing process the amount of ink required for each shade, the time of depletion of the micro drops from the surface of the zirconia in the the porous structure and the size of the generated spot as well as the distribution of the ink depending on the radial distance from the center of the spot is of high interest.
