--- a/LaTeX/literatur.bib
+++ b/LaTeX/literatur.bib
@@ -1,25 +1,3 @@
-
-
-@article{autor2,
- author = {Canny, John},
- year = {1986},
- title = {A {C}omputational {A}pproach to {E}dge {D}etection},
- pages = {679-699},
- volume = {PAMI-8},
- number = {6},
- journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
- abstract = {This paper describes a computational approach to edge detection. The success of the approach depends on the definition of a comprehensive set of goals for the computation of edge points.},
- url = {http://perso.limsi.fr/Individu/vezien/PAPIERS\_ACS/canny1986.pdf}
-}
-
-@Book{autor1,
-  Title                    = {Einführung in die Getriebelehre},
-  Author                   = {Kerle, Hanfried and Pittschellis, Reinhard},
-  Year                     = {2002},
-  Publisher                = {Teubner},
-  Edition					= {2.}
-}
-
 @article{rogers2015point,
 	title={The point spread function and optical dot gain},
 	author={Rogers, Geoffrey L},
@@ -47,6 +25,14 @@
 	year={2018},
 	url={http://zirkonzahn.com/assets/files/brochueren/DE-Broschuere-Die-Zirkonzahn-Schule-web.pdf}
 }
+@misc{idscad2016,
+	title={Chang's liquid brochure},
+	author={{IDS CAD}},
+	year={2016},
+	url={https://www.idscad.com/wp-content/uploads/2016/11/liquid-brochure-1-1.pdf	}
+}
+
+
 @article{lee2016absorption,
 	title={Absorption of impinging water droplet in porous stones},
 	author={Lee, JB and Radu, AI and Vontobel, Peter and Derome, Dominique and Carmeliet, Jan},
@@ -160,4 +146,10 @@
 	volume={5},
 	year={2002},
 	publisher={CRC press}
+}
+@book{nguyen2002fundamentals,
+	title={Fundamentals and applications of microfluidics},
+	author={Nguyen, Nam-Trung and Wereley, Steven T},
+	year={2002},
+	publisher={Artech house}
 }
